# conways-game-of-life

./: .gitignore  LICENSE  Main.hs  README.md  conways-game-of-life.cabal  flake.nix  shell.nix
.direnv/: flake-profile-1-link  flake-profile-2-link
GOL/: Engine.hs  Rule.hs  Space.hs
Graphics/: Command.hs  Config.hs  Display.hs  Engine.hs  GlossUtils.hs
