name:           conways-game-of-life
version:        0.1
synopsis:       A simple implementation of Conway's Game of Life using comonads
author:         Kiana Sheibani
license:        MIT
build-type:     Simple
cabal-version:  >= 1.8

executable main
  build-depends:  base,
                  comonad,
                  Yampa
  main-is:        Main.hs