name:           conways-game-of-life
version:        0.1
synopsis:       A simple implementation of Conway's Game of Life using comonads
author:         Kiana Sheibani
license:        MIT
build-type:     Simple
cabal-version:  >= 1.8

executable main
  main-is:            Main.hs
  build-depends:      base,
                      comonad,
                      Yampa,
                      adjunctions
  default-extensions: MultiParamTypeClasses