name:           conways-game-of-life
version:        0.1
synopsis:       A simple implementation of Conway's Game of Life using comonads
author:         Kiana Sheibani
license:        MIT
build-type:     Simple
cabal-version:  >= 1.8

executable gol
  main-is:        Main.hs
  other-modules:  GOL.Rule,
                  GOL.Space,
                  GOL.Engine,
                  Graphics.GlossUtils,
                  Graphics.Command,
                  Graphics.Engine,
                  Graphics.Display
  build-depends:  base,
                  vector,
                  comonad,
                  distributive,
                  adjunctions,
                  Yampa,
                  gloss